# ledgerly

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  fly.toml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 694af8335edc_add_grand_total_column_to_invoices.py  b7b5978fbd98_add_is_verified_and_fastapi_users_fields.py  e717bfcfa609_initial_migration_users_invoices.py
app/: __init__.py  config.py  exceptions.py  main.py  models.py  money.py  rate_limit.py
app/auth/: manager.py  schemas.py
app/db/: __init__.py  database.py  models.py
app/pdf/: builder.py  theme.py
app/services/: totals.py
examples/: payload.json
static/: auth.js  invoices.js  script.js  style.css
templates/: index.html  invoices.html  landing.html  login.html  privacy.html  register.html  terms.html
tests/: conftest.py  test_api.py  test_auth.py  test_invoices.py  test_models.py  test_pdf.py  test_rate_limit.py  test_theme.py  test_totals.py
