[project]
name = "smart-invoice-generator"
version = "2.0.0"
description = "FastAPI + ReportLab PDF generator for invoices and quotes."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning",
]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
